# delta_patch

./: .travis.yml  Cargo.toml  README.md
src/: magic.rs
