[package]
name = "delta_patch"
version = "0.0.0"
authors = ["Martin Pool <mbp@sourcefrog.net>", "Ferdinand Linnenberg <scarjit@aol.com>"]
description = "Generate and apply diffs relative to file signatures, like rdiff. (Rust version.)"
repository = "https://github.com/arma3modorganizer/delta_patch"
categories = ["algorithms"]
license = "MIT"

[badges]
appveyor = { repository = "Scarjit/delta_patch", branch = "master", service = "github" }
travis-ci = { repository = "arma3modorganizer/delta_patch", branch = "master" }
coveralls = { repository = "https://github.com/arma3modorganizer/delta_patch", branch = "master", service = "github" }
maintenance = { status = "actively-developed" }

[dependencies]
blake2 = "0.7.1"
byteorder = "1"
cast = "0.2.2"
clap = "2.32"
